# miraikakaku-platform

./: .dockerignore.minimal  .env  .env.example  .env.template  .gcloudignore  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  CI_CD_SETUP.md  CLOUD_RUN_MIGRATION_COMPLETE.md  COMPONENT_INTEGRATION_COMPLETE_2025_10_09.md  COMPREHENSIVE_MIGRATION_PLAN.md  COMPREHENSIVE_SYSTEM_ANALYSIS_REPORT.md  CUSTOM_DOMAIN_SETUP_GUIDE.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.data-collector  Dockerfile.lstm  Dockerfile.prediction-generator  Dockerfile.predictions  GCP_CLEANUP_AND_DOMAIN_FIX_PLAN.md  GCP_CLEANUP_COMPLETE_REPORT_2025_10_09.md  GCP_CLEANUP_REPORT.md  MIRAIKAKAKU_COMPREHENSIVE_DOCUMENTATION.md  OPERATIONS_MANUAL.md  PENDING_TASKS_REPORT.md  PHASE7_10_FINAL_DEPLOYMENT_REPORT.md  PHASE_3_1_DEPLOYMENT_GUIDE.md  PHASE_3_2_DEPLOYMENT_GUIDE.md  PHASE_3_ENTERPRISE_ROADMAP.md  PREDICTION_FIX_VERIFICATION.md  PROJECT_STATUS.md  README.md  REMAINING_ISSUES_AND_TASKS_2025_10_14.md  SCHEMA_APPLICATION_SUCCESS_REPORT.md  SECURITY_IMPLEMENTATION.md  (+60 more)
miraikakakuapi/: .env  .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.enhanced  Dockerfile.optimized  alembic.ini  cache_manager.py  cloudbuild.yaml  db_cache.py  db_pool.py  deploy_api_fix.sh  lightweight_main.py  main_api.py  ml_engine.py  multi_tenant_main.py  pyproject.toml  pytest.ini  requirements-websocket.txt  requirements.txt  simple_api_server.py  universal_stock_api.py  websocket_main.py
miraikakakuapi/alembic/: env.py
miraikakakuapi/core/: auth_system.py  cache.py  config.py  database.py  database_manager.py  database_monitor.py  error_handler.py  exceptions.py  logging_config.py  notification_system.py  performance_monitor.py  prediction_accuracy_system.py
miraikakakuapi/data/: comprehensive_japanese_stocks_enhanced.py
miraikakakuapi/database/: multi_tenant_models.py
miraikakakuapi/functions/: .gcloudignore  Dockerfile  Dockerfile.api  Dockerfile.batch  advanced_features.py  analyze_api_services.py  analyze_batch_services.py  api_extensions.py  batch_acceleration_optimizer.py  batch_completion_estimator.py  batch_loader.py  data_summary.py  (+45 more)
miraikakakubatch/: .env.example  .gcloudignore  Dockerfile  Dockerfile.enhanced  batch_system_optimizer.py  cloudbuild.batch.yaml  cloudbuild.yaml  entrypoint.sh  improved-batch-job.yaml  pyproject.toml  pytest.ini  requirements.txt  test_batch.py
(+1197 files in other folders)
